C++Verifier/src/antlr4/SimpleSMTLIBParser.cpp

// Generated from SimpleSMTLIBParser.g4 by ANTLR 4.8


#include "SimpleSMTLIBParserListener.h"

#include "SimpleSMTLIBParser.h"


using namespace antlrcpp;
using namespace antlr4;

SimpleSMTLIBParser::SimpleSMTLIBParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SimpleSMTLIBParser::~SimpleSMTLIBParser() {
  delete _interpreter;
}

std::string SimpleSMTLIBParser::getGrammarFileName() const {
  return "SimpleSMTLIBParser.g4";
}

const std::vector<std::string>& SimpleSMTLIBParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SimpleSMTLIBParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartBoolContext ------------------------------------------------------------------

SimpleSMTLIBParser::StartBoolContext::StartBoolContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleSMTLIBParser::BoolExpressionContext* SimpleSMTLIBParser::StartBoolContext::boolExpression() {
  return getRuleContext<SimpleSMTLIBParser::BoolExpressionContext>(0);
}

tree::TerminalNode* SimpleSMTLIBParser::StartBoolContext::EOF() {
  return getToken(SimpleSMTLIBParser::EOF, 0);
}


size_t SimpleSMTLIBParser::StartBoolContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleStartBool;
}

void SimpleSMTLIBParser::StartBoolContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStartBool(this);
}

void SimpleSMTLIBParser::StartBoolContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStartBool(this);
}

SimpleSMTLIBParser::StartBoolContext* SimpleSMTLIBParser::startBool() {
  StartBoolContext *_localctx = _tracker.createInstance<StartBoolContext>(_ctx, getState());
  enterRule(_localctx, 0, SimpleSMTLIBParser::RuleStartBool);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(20);
    boolExpression();
    setState(21);
    match(SimpleSMTLIBParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StartArithContext ------------------------------------------------------------------

SimpleSMTLIBParser::StartArithContext::StartArithContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleSMTLIBParser::ArithExpressionContext* SimpleSMTLIBParser::StartArithContext::arithExpression() {
  return getRuleContext<SimpleSMTLIBParser::ArithExpressionContext>(0);
}

tree::TerminalNode* SimpleSMTLIBParser::StartArithContext::EOF() {
  return getToken(SimpleSMTLIBParser::EOF, 0);
}


size_t SimpleSMTLIBParser::StartArithContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleStartArith;
}

void SimpleSMTLIBParser::StartArithContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStartArith(this);
}

void SimpleSMTLIBParser::StartArithContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStartArith(this);
}

SimpleSMTLIBParser::StartArithContext* SimpleSMTLIBParser::startArith() {
  StartArithContext *_localctx = _tracker.createInstance<StartArithContext>(_ctx, getState());
  enterRule(_localctx, 2, SimpleSMTLIBParser::RuleStartArith);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(23);
    arithExpression();
    setState(24);
    match(SimpleSMTLIBParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BoolExpressionContext ------------------------------------------------------------------

SimpleSMTLIBParser::BoolExpressionContext::BoolExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimpleSMTLIBParser::BoolExpressionContext::ParOpen() {
  return getTokens(SimpleSMTLIBParser::ParOpen);
}

tree::TerminalNode* SimpleSMTLIBParser::BoolExpressionContext::ParOpen(size_t i) {
  return getToken(SimpleSMTLIBParser::ParOpen, i);
}

SimpleSMTLIBParser::BoolOpContext* SimpleSMTLIBParser::BoolExpressionContext::boolOp() {
  return getRuleContext<SimpleSMTLIBParser::BoolOpContext>(0);
}

std::vector<tree::TerminalNode *> SimpleSMTLIBParser::BoolExpressionContext::ParClose() {
  return getTokens(SimpleSMTLIBParser::ParClose);
}

tree::TerminalNode* SimpleSMTLIBParser::BoolExpressionContext::ParClose(size_t i) {
  return getToken(SimpleSMTLIBParser::ParClose, i);
}

std::vector<SimpleSMTLIBParser::BoolExpressionContext *> SimpleSMTLIBParser::BoolExpressionContext::boolExpression() {
  return getRuleContexts<SimpleSMTLIBParser::BoolExpressionContext>();
}

SimpleSMTLIBParser::BoolExpressionContext* SimpleSMTLIBParser::BoolExpressionContext::boolExpression(size_t i) {
  return getRuleContext<SimpleSMTLIBParser::BoolExpressionContext>(i);
}

SimpleSMTLIBParser::CompOpContext* SimpleSMTLIBParser::BoolExpressionContext::compOp() {
  return getRuleContext<SimpleSMTLIBParser::CompOpContext>(0);
}

std::vector<SimpleSMTLIBParser::ArithExpressionContext *> SimpleSMTLIBParser::BoolExpressionContext::arithExpression() {
  return getRuleContexts<SimpleSMTLIBParser::ArithExpressionContext>();
}

SimpleSMTLIBParser::ArithExpressionContext* SimpleSMTLIBParser::BoolExpressionContext::arithExpression(size_t i) {
  return getRuleContext<SimpleSMTLIBParser::ArithExpressionContext>(i);
}

tree::TerminalNode* SimpleSMTLIBParser::BoolExpressionContext::GRW_Let() {
  return getToken(SimpleSMTLIBParser::GRW_Let, 0);
}

std::vector<SimpleSMTLIBParser::VarBindingContext *> SimpleSMTLIBParser::BoolExpressionContext::varBinding() {
  return getRuleContexts<SimpleSMTLIBParser::VarBindingContext>();
}

SimpleSMTLIBParser::VarBindingContext* SimpleSMTLIBParser::BoolExpressionContext::varBinding(size_t i) {
  return getRuleContext<SimpleSMTLIBParser::VarBindingContext>(i);
}

SimpleSMTLIBParser::BoundVarContext* SimpleSMTLIBParser::BoolExpressionContext::boundVar() {
  return getRuleContext<SimpleSMTLIBParser::BoundVarContext>(0);
}

tree::TerminalNode* SimpleSMTLIBParser::BoolExpressionContext::PS_True() {
  return getToken(SimpleSMTLIBParser::PS_True, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::BoolExpressionContext::PS_False() {
  return getToken(SimpleSMTLIBParser::PS_False, 0);
}


size_t SimpleSMTLIBParser::BoolExpressionContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleBoolExpression;
}

void SimpleSMTLIBParser::BoolExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBoolExpression(this);
}

void SimpleSMTLIBParser::BoolExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBoolExpression(this);
}

SimpleSMTLIBParser::BoolExpressionContext* SimpleSMTLIBParser::boolExpression() {
  BoolExpressionContext *_localctx = _tracker.createInstance<BoolExpressionContext>(_ctx, getState());
  enterRule(_localctx, 4, SimpleSMTLIBParser::RuleBoolExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(56);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(26);
      match(SimpleSMTLIBParser::ParOpen);
      setState(27);
      boolOp();
      setState(29); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(28);
        boolExpression();
        setState(31); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << SimpleSMTLIBParser::ParOpen)
        | (1ULL << SimpleSMTLIBParser::PS_False)
        | (1ULL << SimpleSMTLIBParser::PS_True)
        | (1ULL << SimpleSMTLIBParser::UndefinedSymbol))) != 0));
      setState(33);
      match(SimpleSMTLIBParser::ParClose);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(35);
      match(SimpleSMTLIBParser::ParOpen);
      setState(36);
      compOp();
      setState(37);
      arithExpression();
      setState(38);
      arithExpression();
      setState(39);
      match(SimpleSMTLIBParser::ParClose);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(41);
      match(SimpleSMTLIBParser::ParOpen);
      setState(42);
      match(SimpleSMTLIBParser::GRW_Let);
      setState(43);
      match(SimpleSMTLIBParser::ParOpen);
      setState(45); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(44);
        varBinding();
        setState(47); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == SimpleSMTLIBParser::ParOpen);
      setState(49);
      match(SimpleSMTLIBParser::ParClose);
      setState(50);
      boolExpression();
      setState(51);
      match(SimpleSMTLIBParser::ParClose);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(53);
      boundVar();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(54);
      match(SimpleSMTLIBParser::PS_True);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(55);
      match(SimpleSMTLIBParser::PS_False);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BoolOpContext ------------------------------------------------------------------

SimpleSMTLIBParser::BoolOpContext::BoolOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSMTLIBParser::BoolOpContext::PS_And() {
  return getToken(SimpleSMTLIBParser::PS_And, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::BoolOpContext::PS_Or() {
  return getToken(SimpleSMTLIBParser::PS_Or, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::BoolOpContext::PS_Not() {
  return getToken(SimpleSMTLIBParser::PS_Not, 0);
}


size_t SimpleSMTLIBParser::BoolOpContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleBoolOp;
}

void SimpleSMTLIBParser::BoolOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBoolOp(this);
}

void SimpleSMTLIBParser::BoolOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBoolOp(this);
}

SimpleSMTLIBParser::BoolOpContext* SimpleSMTLIBParser::boolOp() {
  BoolOpContext *_localctx = _tracker.createInstance<BoolOpContext>(_ctx, getState());
  enterRule(_localctx, 6, SimpleSMTLIBParser::RuleBoolOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SimpleSMTLIBParser::PS_And)
      | (1ULL << SimpleSMTLIBParser::PS_Or)
      | (1ULL << SimpleSMTLIBParser::PS_Not))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithExpressionContext ------------------------------------------------------------------

SimpleSMTLIBParser::ArithExpressionContext::ArithExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSMTLIBParser::ArithExpressionContext::ParOpen() {
  return getToken(SimpleSMTLIBParser::ParOpen, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::ArithExpressionContext::GRW_Ite() {
  return getToken(SimpleSMTLIBParser::GRW_Ite, 0);
}

SimpleSMTLIBParser::BoolExpressionContext* SimpleSMTLIBParser::ArithExpressionContext::boolExpression() {
  return getRuleContext<SimpleSMTLIBParser::BoolExpressionContext>(0);
}

std::vector<SimpleSMTLIBParser::ArithExpressionContext *> SimpleSMTLIBParser::ArithExpressionContext::arithExpression() {
  return getRuleContexts<SimpleSMTLIBParser::ArithExpressionContext>();
}

SimpleSMTLIBParser::ArithExpressionContext* SimpleSMTLIBParser::ArithExpressionContext::arithExpression(size_t i) {
  return getRuleContext<SimpleSMTLIBParser::ArithExpressionContext>(i);
}

tree::TerminalNode* SimpleSMTLIBParser::ArithExpressionContext::ParClose() {
  return getToken(SimpleSMTLIBParser::ParClose, 0);
}

SimpleSMTLIBParser::ArithOpContext* SimpleSMTLIBParser::ArithExpressionContext::arithOp() {
  return getRuleContext<SimpleSMTLIBParser::ArithOpContext>(0);
}

SimpleSMTLIBParser::TerminalContext* SimpleSMTLIBParser::ArithExpressionContext::terminal() {
  return getRuleContext<SimpleSMTLIBParser::TerminalContext>(0);
}


size_t SimpleSMTLIBParser::ArithExpressionContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleArithExpression;
}

void SimpleSMTLIBParser::ArithExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArithExpression(this);
}

void SimpleSMTLIBParser::ArithExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArithExpression(this);
}

SimpleSMTLIBParser::ArithExpressionContext* SimpleSMTLIBParser::arithExpression() {
  ArithExpressionContext *_localctx = _tracker.createInstance<ArithExpressionContext>(_ctx, getState());
  enterRule(_localctx, 8, SimpleSMTLIBParser::RuleArithExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(77);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(60);
      match(SimpleSMTLIBParser::ParOpen);
      setState(61);
      match(SimpleSMTLIBParser::GRW_Ite);
      setState(62);
      boolExpression();
      setState(63);
      arithExpression();
      setState(64);
      arithExpression();
      setState(65);
      match(SimpleSMTLIBParser::ParClose);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(67);
      match(SimpleSMTLIBParser::ParOpen);
      setState(68);
      arithOp();
      setState(70); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(69);
        arithExpression();
        setState(72); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << SimpleSMTLIBParser::ParOpen)
        | (1ULL << SimpleSMTLIBParser::PIPE)
        | (1ULL << SimpleSMTLIBParser::Numeral)
        | (1ULL << SimpleSMTLIBParser::UndefinedSymbol))) != 0));
      setState(74);
      match(SimpleSMTLIBParser::ParClose);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(76);
      terminal();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompOpContext ------------------------------------------------------------------

SimpleSMTLIBParser::CompOpContext::CompOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSMTLIBParser::CompOpContext::PS_Eq() {
  return getToken(SimpleSMTLIBParser::PS_Eq, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::CompOpContext::PS_Lt() {
  return getToken(SimpleSMTLIBParser::PS_Lt, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::CompOpContext::PS_Le() {
  return getToken(SimpleSMTLIBParser::PS_Le, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::CompOpContext::PS_Gt() {
  return getToken(SimpleSMTLIBParser::PS_Gt, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::CompOpContext::PS_Ge() {
  return getToken(SimpleSMTLIBParser::PS_Ge, 0);
}


size_t SimpleSMTLIBParser::CompOpContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleCompOp;
}

void SimpleSMTLIBParser::CompOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompOp(this);
}

void SimpleSMTLIBParser::CompOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompOp(this);
}

SimpleSMTLIBParser::CompOpContext* SimpleSMTLIBParser::compOp() {
  CompOpContext *_localctx = _tracker.createInstance<CompOpContext>(_ctx, getState());
  enterRule(_localctx, 10, SimpleSMTLIBParser::RuleCompOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SimpleSMTLIBParser::PS_Eq)
      | (1ULL << SimpleSMTLIBParser::PS_Lt)
      | (1ULL << SimpleSMTLIBParser::PS_Le)
      | (1ULL << SimpleSMTLIBParser::PS_Gt)
      | (1ULL << SimpleSMTLIBParser::PS_Ge))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithOpContext ------------------------------------------------------------------

SimpleSMTLIBParser::ArithOpContext::ArithOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSMTLIBParser::ArithOpContext::PS_Add() {
  return getToken(SimpleSMTLIBParser::PS_Add, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::ArithOpContext::PS_Sub() {
  return getToken(SimpleSMTLIBParser::PS_Sub, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::ArithOpContext::PS_Mul() {
  return getToken(SimpleSMTLIBParser::PS_Mul, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::ArithOpContext::PS_Div() {
  return getToken(SimpleSMTLIBParser::PS_Div, 0);
}


size_t SimpleSMTLIBParser::ArithOpContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleArithOp;
}

void SimpleSMTLIBParser::ArithOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArithOp(this);
}

void SimpleSMTLIBParser::ArithOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArithOp(this);
}

SimpleSMTLIBParser::ArithOpContext* SimpleSMTLIBParser::arithOp() {
  ArithOpContext *_localctx = _tracker.createInstance<ArithOpContext>(_ctx, getState());
  enterRule(_localctx, 12, SimpleSMTLIBParser::RuleArithOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SimpleSMTLIBParser::PS_Add)
      | (1ULL << SimpleSMTLIBParser::PS_Sub)
      | (1ULL << SimpleSMTLIBParser::PS_Div)
      | (1ULL << SimpleSMTLIBParser::PS_Mul))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarBindingContext ------------------------------------------------------------------

SimpleSMTLIBParser::VarBindingContext::VarBindingContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSMTLIBParser::VarBindingContext::ParOpen() {
  return getToken(SimpleSMTLIBParser::ParOpen, 0);
}

tree::TerminalNode* SimpleSMTLIBParser::VarBindingContext::UndefinedSymbol() {
  return getToken(SimpleSMTLIBParser::UndefinedSymbol, 0);
}

SimpleSMTLIBParser::BoolExpressionContext* SimpleSMTLIBParser::VarBindingContext::boolExpression() {
  return getRuleContext<SimpleSMTLIBParser::BoolExpressionContext>(0);
}

tree::TerminalNode* SimpleSMTLIBParser::VarBindingContext::ParClose() {
  return getToken(SimpleSMTLIBParser::ParClose, 0);
}


size_t SimpleSMTLIBParser::VarBindingContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleVarBinding;
}

void SimpleSMTLIBParser::VarBindingContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarBinding(this);
}

void SimpleSMTLIBParser::VarBindingContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSMTLIBParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarBinding(this);
}

SimpleSMTLIBParser::VarBindingContext* SimpleSMTLIBParser::varBinding() {
  VarBindingContext *_localctx = _tracker.createInstance<VarBindingContext>(_ctx, getState());
  enterRule(_localctx, 14, SimpleSMTLIBParser::RuleVarBinding);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(SimpleSMTLIBParser::ParOpen);
    setState(84);
    match(SimpleSMTLIBParser::UndefinedSymbol);
    setState(85);
    boolExpression();
    setState(86);
    match(SimpleSMTLIBParser::ParClose);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BoundVarContext ------------------------------------------------------------------

SimpleSMTLIBParser::BoundVarContext::BoundVarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSMTLIBParser::BoundVarContext::UndefinedSymbol() {
  return getToken(SimpleSMTLIBParser::UndefinedSymbol, 0);
}


size_t SimpleSMTLIBParser::BoundVarContext::getRuleIndex() const {
  return SimpleSMTLIBParser::RuleBoundVar;
}
